--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
   body {
     display: flex;
     height: 100vh;
-    background-color: #f0f2f5;
+    background-color: #0c0c0c;
   }
   
   .sidebar {
